# ruscalimat

./: .editorconfig  README.md  docker-compose.yaml
backend/: .env  Cargo.toml  Dockerfile  Dockerfile.alpine  README.md  config.dev.toml  config.prod.toml  config.toml  private_key.pem
backend/.sqlx/: query-04d177a78bef1eb9d6c0b7455e610b56580aa2c7c9729bc395018177d00bb6b2.json  query-060a8371feb8832a5aabd702b497b4ccfdf91af6642a5bb87b7072f4572a02b2.json  query-08e3b5edb744c57a4145a469e35dcfbdc3e27682679d4ed0c353aeea2d5f30f4.json  query-0a8071355541ebe42841a5f25f0b9579b59fbc68f140b7092db04aa8c1b5181c.json  query-0cb26050f59025e0b15957e57a6b7c667348aed1286879f769c9d931abc09ef7.json  query-10d77c6f3a0fd837cce4fdef1f51fa9eed813147a55e910b1cf0cdd972149ada.json  query-1322cb5b9e644c07a4e285575f3228b0ff64b1b7a104036d8b9f5b41bc6fb98f.json  query-1400f0b001a207196240b91117ece5917648b0157ef2dd66e5faa5777ac11ff7.json  query-1a81794620597eea4bdbf37414406179aa1a25f11ae747b5edf71c0c0afdc9b1.json  query-1c885ab64920901df4c9b562b329932e247db544610d2faa31daabbc2b87e5d0.json  query-1e31975b302d12dc85708dd7e730c9d7afda28853f202900a601b9c429e09442.json  query-1f7a3e8c427ece22ae6e5579120b90a5178d5d8abbdc3a788c2db5aa64408408.json  query-301428ab34a133644c3e16b835f96a3bb46e0a3e052b143b85244fbe40bbf8cd.json  query-33de585f492d980dd6fc2420352233a03fdc6ed226fdb338a31601f906805454.json  query-34030df49391e324a6343f75e60f1b367370cfc49990b4806894847e8c34c5b7.json  query-3521b4f4f136e5c89a034771f8af8c397e9501b8d38332967cba617ab3dba59a.json  query-3b37559f325f1e274e61cbd665935e4c71f24c24bae555c2bc665945e034e979.json  query-40f4d37b7d569a4b457f7723e345623ee72eecb7b0c8c6c1d3d1122f0410376f.json  query-410deb0b879c07d51abe3631928d8e7c09d605493d34971761e59605806b02e1.json  query-420aa3cd7e3ad33b9c96ed7a162261619dcdc722f6d4b7d9f4d716ac4372dbeb.json  query-447f5f769b4528f2319a19c022b937ad077467764c1bca13cb8713f4be0cb8b9.json  query-48cc1d7c05d748a66a742f91a4e65d421326fdd315f366ef2e797256acb6fc81.json  query-4d70f6d4822ac9db64549e8dab2ef42d068ecec7e9eb0bf21570ca45e2a5441e.json  query-54bb54f45e14166ba87b7f91a3d73d74b60edda248a05448d0e180f1dd939162.json  query-54c66b2c379f526fb08dd8ed05792342e3982a7875beec935b1774acab09565b.json  query-5529d59fd2a410d9d4f2fe3e4901dc2e067015f6370cf2520637cdc573bb2c8e.json  query-5a3412efc910cbf431f5265df5c0c2c9eaa6f326e0320b0e26f5f46e83c19475.json  query-60a8a4cb7d68d3590f5d52b70cd74ae01b92bae4c020997fdda5a9348742b6f0.json  query-6864adba1199e0ace6123844eba04dbe0719d0bcc2eaed81877993ff27f98cc1.json  query-697298d88fcdc1d7f7571f7c33dab7f682fd02ee7f93ff713641353b2291b281.json  query-69a4fa935a0d91459d8334769c3bf905a2e4c1cf42637c235f97d7e5522417ed.json  query-6b7ffe4d19fe3aa36bd76b0f83482cfdef656f19234278f3b2d62f698100fae3.json  query-6bf7f876c364289df23bdeb9c06c9331f7fcb8dc3943f63537f1dd7c75775200.json  query-6f5c0a934b8467acfcbca1366bc5fee48e595a9c90b2f2460aad9f55459ee8ec.json  query-714d10cb76076a8c10d147a14bfda609e7d809186b602406b671d4dd79a0ca8e.json  query-7255bb90c9cb01534fdabe8e65686cbe5334ae50cbb98083994baa329bb6b8df.json  query-7442f5440e3cc224f9c71168fdfe50e6d9d320b3550a4c5528d28d17fabaa60f.json  query-74ca7889b22a7956a644e3bbc1cedb58a4a81a67569bc4cd00a739f2df391a5f.json  query-7d9edaba3dab2a8b5420354abb61f4cc5f38b86017a6dce0156f0080fff1dcf9.json  query-7e331ba7c771785dcc0c1eac796123d5d5ee267127608e8f4fa83992d44c3f49.json  (+47 more)
backend/migrations/: 20230806191643_init.sql  20230917113914_product_picture.sql
backend/src/: auth.rs  config.rs  db.rs  graphql.rs  main.rs  pictureapi.rs  rest.rs  s3.rs
backend/src/db/: account.rs
backend/src/graphql/: account.rs  model.rs  product.rs  purchase.rs  statistics.rs  types.rs
backend/src/pictureapi/: accountapi.rs  productapi.rs
backend/src/rest/: pictureapi.rs
(+8 files in other folders)
