[package]
name = "ruscalimat-backend"
version = "0.1.0"
edition = "2021"
authors = ["schitcrafter", "Keyruu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "6.0.1", features = ["tokio", "chrono"] }
async-graphql-poem = "6.0.1"
bcrypt = "0.15.0"
chrono = "0.4.26"
color-eyre = "0.6.2"
dotenvy = "0.15.7"
jsonwebtoken = "8.3.0"
poem = "1.3.57"
poem-openapi = { version = "3.0.1", features = ["openapi-explorer"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.1", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono",
] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.104"
