[package]
name = "ruscalimat-backend"
version = "0.1.0"
edition = "2021"
authors = ["schitcrafter", "Keyruu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
aws-config = "0.56.1"
aws-sdk-s3 = "0.31.1"
aws-credential-types = { version = "0.56.1", features = [
    "hardcoded-credentials",
] }
once_cell = "1.18.0"
bytes = "1.4.0"
async-graphql = { version = "6.0.1", features = ["tokio", "chrono"] }
async-graphql-poem = "6.0.1"
bcrypt = "0.15.0"
chrono = "0.4.26"
color-eyre = "0.6.2"
dotenvy = "0.15.7"
jsonwebtoken = { version = "8.3.0", features = ["use_pem"] }
poem = { version = "1.3.58", features = ["eyre06"] }
poem-openapi = { version = "3.0.1", features = ["openapi-explorer"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.1", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono",
] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.104"
config = "0.13.3"

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "*", features = ["vendored"] }
