[package]
name = "ruscalimat-backend"
version = "0.1.0"
edition = "2021"
authors = ["schitcrafter", "Keyruu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.5", features = ["v4", "fast-rng"] }
aws-config = "0.56"
aws-sdk-s3 = "0.33"
aws-credential-types = { version = "0.56", features = [
    "hardcoded-credentials",
] }
once_cell = "1.18"
bytes = "1.4"
async-graphql = { version = "6.0", features = ["tokio", "chrono"] }
async-graphql-poem = "6.0"
bcrypt = "0.15"
chrono = "0.4"
color-eyre = "0.6"
dotenvy = "0.15"
jsonwebtoken = { version = "9.0", features = ["use_pem"] }
poem = { version = "1.3", features = ["eyre06"] }
poem-openapi = { version = "3.0", features = ["openapi-explorer"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono",
] }
tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
config = "0.13"

# musl can't link libraries dynamically, so we tell
# the openssl crate to compile openssl, and statically link it.
[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "*", features = ["vendored"] }
